# ESPlib

./: .gitignore  .gitmodules  AS7331.cpp  AS7331.h  Application.cpp  Application.h  Blinker.h  BrightnessManager.cpp  BrightnessManager.h  ButtonManager.cpp  ButtonManager.h  Clock.cpp  Clock.h  DSP7S04B.cpp  DSP7S04B.h  ESPWiFiPortal.cpp  ESPWiFiPortal.h  FSMac.cpp  FSMac.h  Font_8x8_8pt.h  Font_Compact_5pt.h  Graphics.cpp  Graphics.h  HTTPClient.cpp  HTTPClient.h  HTTPFetchClient.cpp  HTTPFetchClient.h  HTTPParser.cpp  HTTPParser.h  HTTPUploadMultupleBinaryFile.txt  HTTPUploadMultupleTextFile.txt  HTTPUploadSingleBinaryFile.txt  HTTPUploadSingleTextFile.txt  IDFWiFiPortal.cpp  IDFWiFiPortal.h  JSONParser.cpp  JSONParser.h  JsonListener.h  JsonStreamingParser.cpp  JsonStreamingParser.h  (+65 more)
Vesper/: Vesper.cpp  Vesper.h  Vesper.ino  partitions.csv  timing.lua
Vesper/arduino/: CMakeLists.txt
Vesper/arduino/main/: CMakeLists.txt  idf_component.yml  main.cpp
Vesper/espidf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6
Vesper/espidf/main/: CMakeLists.txt  idf_component.yml  main.cpp
littlefs/: index.html
m8r/: Blinker.h  BrightnessManager.h  ButtonManager.h  LocalTimeServer.h  Max7219Display.h  MenuSystem.h  StateMachine.h  WUnderground.h  WeatherServer.h
mac/: HTTPParser.cpp  HTTPParser.h  LuaManager.cpp  LuaManager.h  MacWebServer.cpp  MacWebServer.h  MultipartParser.cpp  MultipartParser.h  main.cpp
mac/ESPlib.xcodeproj/: project.pbxproj
mac/ESPlib.xcodeproj/xcshareddata/xcschemes/: ESPlib.xcscheme  Vesper.xcscheme  webby.xcscheme
mac/webby/: main.cpp
mil/: Application.h  Blinker.h  BrightnessManager.h  ButtonManager.h  Clock.h  LocalTimeServer.h  MenuSystem.h  StateMachine.h  TimeWeatherServer.h  WeatherServer.h
